crates/service/tests/code_action/snapshots/features__code_action__expand_compact_import__encoding2.snap
---
source: crates/service/tests/code_action/expand_compact_import.rs
expression: response
---
[
  {
    "title": "Expand compact import",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 2
              },
              "end": {
                "line": 2,
                "character": 47
              }
            },
            "newText": "(import \"env\" \"a\" (memory))\n  (import \"env\" \"b\" (memory))"
          }
        ]
      }
    }
  }
]
