crates/service/tests/code_action/snapshots/features__code_action__expand_compact_import__no_extern_type.snap
---
source: crates/service/tests/code_action/expand_compact_import.rs
expression: response
---
[
  {
    "title": "Expand compact import",
    "kind": "refactor.rewrite",
    "edit": {
      "changes": {
        "untitled:test": [
          {
            "range": {
              "start": {
                "line": 2,
                "character": 2
              },
              "end": {
                "line": 2,
                "character": 38
              }
            },
            "newText": "(import \"env\" \"a\")\n  (import \"env\" \"b\")"
          }
        ]
      }
    }
  }
]
